[FEATURE] DELETE /activity/{activityId}
