# server/api/openapi.yaml
@@ -138,6 +138,34 @@ paths:
       - User
       x-eov-operation-handler: controllers/UserController
   /activity/{activityId}:
+    delete:
+      description: delete activity and related relationships
+      operationId: deleteActivity
+      parameters:
+      - description: Id of the activity
+        explode: false
+        in: path
+        name: activityId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "204":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NullableEmptyObject'
+          description: The activity and its relationships were deleted successfully
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Internal Error
+      tags:
+      - Activity
+      x-eov-operation-handler: controllers/ActivityController
     get:
       description: Get activity info
       operationId: getActivity
