# server/providers/dao/ActivityNeo4JRequester.js
@@ -42,15 +42,27 @@ class ActivityNeo4JRequester {
   }
 
   static deleteActivity(conditions, next) {
-    const filter = `${(conditions.id)? 'id:$id,' : ''} ${(conditions.name)? 'name:$name' : ''} `;
+    if (conditions.name) {
+      const filter = `${(conditions.id) ? 'id:$id,' : ''} ${(conditions.name) ? 'name:$name' : ''} `;
 
-    neo4JSessionInstance.run(`MATCH (activity:Activity {${filter}} ) DELETE activity`, conditions)
-      .then((result) => {
-        next(null, conditions);
-      })
-      .catch((err) => {
-        next(err);
-      });
+      neo4JSessionInstance.run(`MATCH (activity:Activity {${filter}} ) DELETE activity`, conditions)
+        .then((result) => {
+          next(null, conditions);
+        })
+        .catch((err) => {
+          next(err);
+        });
+    } else {
+      const filter = `${(conditions.id) ? 'id:$id' : ''}`;
+
+      neo4JSessionInstance.run(`MATCH (activity:Activity {${filter}} ) DELETE activity`, conditions)
+        .then((result) => {
+          next(null, conditions);
+        })
+        .catch((err) => {
+          next(err);
+        });
+    }
   }
 
   static findOne(activity, next) {
@@ -76,7 +88,7 @@ class ActivityNeo4JRequester {
   }
 
   static findAll(conditions, next) {
-    const filter = `${(conditions.id)? 'id : $id,' : ''} ${(conditions.name)? 'name : $name,' : ''} `;
+    const filter = `${(conditions.id) ? 'id : $id,' : ''} ${(conditions.name) ? 'name : $name,' : ''} `;
 
     neo4JSessionInstance.run(`MATCH (activities:Activity {${filter}}) RETURN activities`, conditions)
       .then((result) => {
